# WRIT

./: README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/: daily_verses.txt
data/plans/: gospels.txt  new-testament.txt  psalms-and-proverbs.txt
scripts/: import_translation.py
tests/: test_books.py
vrs/: cli.py  db.py
writ/: bookmarks.py  books.py  cli.py  daily.py  db.py  display.py  history.py  lookup.py  notes.py  plans.py  search.py
