[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "writ"
version = "0.1.0"
description = "Lightning-fast terminal Bible reference and reading tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["bible", "scripture", "terminal", "cli", "reading", "cyberdeck"]
authors = [
    {name = "Spasm0dic"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Religion",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.urls]
Homepage   = "https://github.com/Spasm0dic/WRIT"
Repository = "https://github.com/Spasm0dic/WRIT"
Issues     = "https://github.com/Spasm0dic/WRIT/issues"

[project.scripts]
writ = "writ.cli:app"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["writ"]
include = ["data/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
